subscription status badge and paddle client portal